Eligibility results should mention work eligibility

--- a/home/templates/home/eligibility_results.html
+++ b/home/templates/home/eligibility_results.html
@@ -34,7 +34,7 @@ Outreachy eligibility results
 	we have determined that you are not a strong applicant for the Outreachy internship program.
 	This may be due to one of several reasons:
 	<ul>
-		<li>You may not be eligible to be paid as a contractor of a non-profit based in the United States of America. This could be due to being a legal minor (under 18), visa restrictions, U.S. sanctions programs, or U.S. export restrictions.</li>
+		<li>You may not be eligible to be paid as a contractor of a non-profit based in the United States of America. This could be due to you not being eligible to work in all the countries you are living in during your internship, you being a legal minor (under 18), visa restrictions, U.S. sanctions programs, or U.S. export restrictions.</li>
 		<li>You may have already participated in Google Summer of Code or a previous Outreachy round.</li>
 		<li>You may not have sufficiently explained why your application is aligned with the Outreachy program goal of supporting people from groups under-represented in the technology industry.</li>
 	</ul>
