Add application detail view for staff.
Eventually this page should be shown to reviewers as well.

--- a/home/templates/home/snippet/application_review_headers.html
+++ b/home/templates/home/snippet/application_review_headers.html
@@ -2,9 +2,8 @@
 <tr>
 	<th scope="col">Application Date</th>
 	<th scope="col">Status</th>
-	<th scope="col">Action to Take</th>
+	<th scope="col">Reason for status</th>
 	<th scope="col">Contact info</th>
-	<th scope="col">Pronouns</th>
 	<th scope="col">Reviewer Recommendations</th>
 	<th scope="col">Reviewer Comments</th>
 	<th scope="col">Reviewer Actions</th>
