Shorten column in application status

--- a/home/templates/home/snippet/application_review_headers.html
+++ b/home/templates/home/snippet/application_review_headers.html
@@ -4,7 +4,7 @@
 	<th scope="col">Status</th>
 	<th scope="col">Reason for status</th>
 	<th scope="col">Contact info</th>
-	<th scope="col">Reviewer Recommendations</th>
+	<th scope="col">Reviewer Status</th>
 	<th scope="col">Reviewer Comments</th>
 	<th scope="col">Reviewer Actions</th>
 </tr>
