Show application date and 10 business day SLA on application review

--- a/home/templates/home/eligibility_results.html
+++ b/home/templates/home/eligibility_results.html
@@ -217,7 +217,7 @@ Outreachy eligibility results
 	You will receive an email when your initial application has been approved.
 	</p>
 	<p>
-	If you have not received a follow up email within a week,
+	You submitted your application on {{ application.submission_date }}. If you have not received a follow up email within 10 business days,
 	please <a href="/contact">contact the Outreachy organizers</a>.
 	</p>
 	<p>You will not be able to record contributions or make a final application until your initial application has been approved.
