Pending prompt: link to application and use initial application terminology

--- a/home/templates/home/snippet/pending_prompt.html
+++ b/home/templates/home/snippet/pending_prompt.html
@@ -1,12 +1,12 @@
 <div class="card border-info mb-3">
 	{% if not current_round.has_application_deadline_passed %}
-		<div class="card-header text-white bg-warning">Outreachy Application Pending</div>
+		<div class="card-header text-white bg-warning">Outreachy Initial Application Under Review</div>
 		<div class="card-body">
 			<p class="card-text">
-			The Outreachy organizers are checking details about your application.
+			The Outreachy organizers are reviewing <a href="{% url 'eligibility-results' %}">your initial application</a>.
 			</p>
 			<p class="card-text">
-			Until they verify your eligibility, some information about the internships will be hidden,
+			Until your initial application is approved, some information about the internships will be hidden,
 			including full project details, mentor contact information, and how to make contributions
 			to internship projects.
 			</p>
