--- a/home/templates/home/eligibility_results.html
+++ b/home/templates/home/eligibility_results.html
@@ -28,6 +28,8 @@ Outreachy eligibility results
 	</p>
 	<p><a class='btn btn-success' href="{{ current_round.url }}">View Internship Projects</a></p>
 
+	{% include 'home/snippets/initial_application.html' %}
+
 {% elif application.approval_status == application.REJECTED and application.reason_denied != 'TIME' %}
 	<h1>Initial application is not approved</h1>
 	<p>We're sorry, but after reviewing your application,
@@ -47,6 +49,8 @@ Outreachy eligibility results
 	If the information is correct, please take a look at the list of <a href="/opportunities">other opportunities</a> that may be a better fit for you.
 	</p>
 
+	{% include 'home/snippets/initial_application.html' %}
+
 {% elif application.approval_status == application.REJECTED and application.reason_denied == 'TIME' %}
 
 	<h1>Initial application is not approved</h1>
@@ -63,60 +67,10 @@ Outreachy eligibility results
 	</p>
 	<h2><strong>Your Time Commitments:</strong></h2>
 
-	{% if school_time_commitments %}
-		<h3>School Term Information</h3>
-	{% endif %}
-	{% for term in school_time_commitments %}
-		<p>{{ term.term_name }}</p>
-		<ul>
-			<li>Date classes start for all students: <strong>{{ term.start_date|date:"F d, Y" }}</strong></li>
-			<li>Date exams end for all students: <strong>{{ term.end_date|date:"F d, Y" }}</strong></li>
-			<li>Number of credits for a typical student: <strong>{{ term.typical_credits }}</strong></li>
-			<li>Number of credits you're registered for: <strong>{{ term.registered_credits }}</strong></li>
-			<li>Number of internship or project credits for Outreachy: <strong>{{ term.outreachy_credits }}</strong></li>
-			<li>Number of graduate thesis or research credits: <strong>{{ term.thesis_credits }}</strong></li>
-		</ul>
-	{% endfor %}
-	{% if noncollege_school_time_commitments %}
-		<h3>Code School or Online Courses Information</h3>
-	{% endif %}
-	{% for course in noncollege_school_time_commitments %}
-		<p>Course #{{ forloop.counter }}</p>
-		<ul>
-			<li>Date your coding school or online course starts: <strong>{{ course.start_date|date:"F d, Y" }}</strong></li>
-			<li>Date your coding school or online course ends: <strong>{{ course.end_date|date:"F d, Y" }}</strong></li>
-			<li>Maximum hours per week spent on coursework, exercises, homework, and studying: <strong>{{ course.hours_per_week }}</strong></li>
-			<li>Description of organization offering courses and course name and description: <strong>{{ course.description }}</strong></li>
-		</ul>
-	{% endfor %}
+	{% include 'home/snippet/time_commitments.html' %}
 
-	{% if employment_time_commitments %}
-		<h3>Employment or Contract Information</h3>
-	{% endif %}
-	{% for contract in employment_time_commitments %}
-		<p>Employment Period #{{ forloop.counter }}</p>
-		<ul>
-			<li>Date employment starts: <strong>{{ contract.start_date|date:"F d, Y" }}</strong></li>
-			<li>Date employment ends: <strong>{{ contract.end_date|date:"F d, Y" }}</strong></li>
-			<li>Number of hours per week required by your employment contract: <strong>{{ contract.hours_per_week }}</strong></li>
-			<li>Will you quit this employment or contract work if you are accepted for Outreachy?
-				{% if contract.quit_on_acceptance %}<strong>Yes.</strong>{% else %}<strong>No.</strong>{% endif %}</li>
-		</ul>
-	{% endfor %}
-
-	{% if volunteer_time_commitments %}
-		<h3>Volunteer Information</h3>
-	{% endif %}
-	{% for position in volunteer_time_commitments %}
-		<p>Volunteer Period #{{ forloop.counter }}</p>
-		<ul>
-			<li>Date your volunteer time commitments start: <strong>{{ position.start_date|date:"F d, Y" }}</strong></li>
-			<li>Date your volunteer time commitments end: <strong>{{ position.end_date|date:"F d, Y" }}</strong></li>
-			<li>Maximum hours per week spent volunteering: <strong>{{ position.hours_per_week }}</strong></li>
-			<li>Description of volunteer position and duties: <strong>{{ position.description }}</strong></li>
-		</ul>
-	{% endfor %}
 	<h2>Weeks Free From Full-Time Commitments</h2>
+
 	{% if free_period_start_date %}
 		<p>Based on the information you provided, you have the
 		following consecutive days free from full-time commitments:
@@ -223,6 +177,7 @@ Outreachy eligibility results
 	<p>You will not be able to record contributions or make a final application until your initial application has been approved.
 	Do not try to contact mentors or community coordinators until your initial application has been approved.</p>
 
+	{% include 'home/snippet/initial_application.html' %}
 
 {% endif %}
 
