--- a/home/templates/home/snippet/apply_prompt.html
+++ b/home/templates/home/snippet/apply_prompt.html
@@ -7,7 +7,7 @@
 	    <div class="collapse{% if show_reminders == 1 %} show{% endif %}" id="applicant-action-accordion">
 	    <div class="card-body">
 		<p class="card-text">
-		Thank you for recording your contributions and creating {{ project_applications|pluralize:"a project application, project applications" }}. You will need to create an application for each project, in order to be eligible to be selected as an intern for that project.
+		Thank you for recording your contributions and creating {{ project_applications|pluralize:"a project final application, project final applications" }}. You will need to create a final application for each project, in order to be eligible to be selected as an intern for that project.
 		</p>
 		<p class="card-text">
 		{% if not current_round.has_ontime_application_deadline_passed %}
@@ -30,10 +30,10 @@
 	    <div class="card-header text-white bg-warning">Submit a Project Application</div>
 	    <div class="card-body">
 		<p class="card-text">
-		<strong>Your next step is to create an application.</strong> You will need to create an application for each project, in order to be eligible to be selected as an intern for that project.
+		<strong>Your next step is to create a final application.</strong> You will need to create a final application for each project, in order to be eligible to be selected as an intern for that project.
 		</p>
 		<p class="card-text">
-		The application deadline is {{ current_round.appsclose|date:"F d, Y" }}. Some projects are open to late applications, and their application deadline will be {{ current_round.appslate|date:"F d, Y" }}.
+		The final application deadline is {{ current_round.appsclose|date:"F d, Y" }}. Some projects are open to late final applications, and their final application deadline will be {{ current_round.appslate|date:"F d, Y" }}.
 		</p>
 {% endif %}
 	<h5 class="card-text">My Contributions</h5>
@@ -47,14 +47,14 @@
 					<li>Application deadline: {{ p.application_deadline }} 4pm UTC</li>
 					{% if not p.has_application_deadline_passed %}
 						<li><a href="{{ p.get_contributions_url }}">Record your contributions</a></li>
-						<li><a href="{{ p.get_contributions_url }}">Edit or create an application</a></li>
+						<li><a href="{{ p.get_contributions_url }}">Edit or create a final application</a></li>
 						<li><a href="{% url 'community-landing' round_slug=current_round.slug slug=p.project_round.community.slug  %}">View project information</a></li>
 					{% else %}
 						{% if p in project_applications %}
 							<li><a href="{{ p.get_contributions_url }}">Record your contributions</a></li>
-							<li><a href="{{ p.get_contributions_url }}">View your application</a></li>
+							<li><a href="{{ p.get_contributions_url }}">View your final application</a></li>
 						{% else %}
-							<li>The project deadline has passed, and since you have not submitted an application,
+							<li>The project deadline has passed, and since you have not submitted a final application,
 								you are not eligible to be selected as an intern for this project.</li>
 							<li><a href="{{ p.get_contributions_url }}">View your contributions</a></li>
 						{% endif %}
@@ -67,7 +67,7 @@
 	{% if not current_round.has_application_deadline_passed %}
 		<p class="card-text">
 		Interested in applying to another project?
-		You'll need to record a contribution for a project in order to be eligible to create an application.
+		You'll need to record a contribution for a project in order to be eligible to create a final application.
 		You can see the full list of projects and their deadlines on the
 		<a href="{% url 'project-selection' %}">project selection page</a>.
 		</p>
@@ -76,7 +76,7 @@
 	{% if project_applications %}
 	<h5 class="card-text">Applications</h5>
 		<p class="card-text">
-		Only applicants who submit an application for a project will be eligible to be selected as an intern for that project. You've created applications for the following projects:
+		Only applicants who submit a final application for a project will be eligible to be selected as an intern for that project. You've created final applications for the following projects:
 		</p>
 
 		<ul class="card-text">
