--- a/home/templates/home/snippet/ineligible_prompt.html
+++ b/home/templates/home/snippet/ineligible_prompt.html
@@ -1,12 +1,13 @@
 <div class="card border-info mb-3">
-    <div class="card-header text-white bg-warning">Ineligible for Outreachy</div>
+    <div class="card-header text-white bg-warning">Initial Application Not Approved</div>
     <div class="card-body">
 	<p class="card-text">
-	Unfortunately, you're not eligible to apply for Outreachy.
+	We're sorry, but after reviewing <a href="{% url 'eligibility-results' %}">your application</a>,
+        we have determined that you are not a strong applicant for the Outreachy internship program.
 	</p>
 	<p class="card-text">
-	You can spread the word to other eligible people,
-	and there are <a href="/promote">posters and other resources</a> to help you do that.
+	If you want to spread the word about Outreachy,
+	there are <a href="/promote">posters and other resources</a> to help you do that.
 	</p>
 	<p class="card-text">
 	If you want to be notified when the next Outreachy application round opens,
