Anonymized essay answers may be used in sponsor materials and on the website

--- a/home/templates/home/eligibility_wizard_essay_questions.html
+++ b/home/templates/home/eligibility_wizard_essay_questions.html
@@ -16,6 +16,9 @@ The following essay questions help us determine if your application is aligned w
 <p>
 The answer to this question will only be seen by the <a href="/contact/">Outreachy organizers</a>.
 It will not be shared with mentors, coordinators, or other applicants.
+Please note that Outreachy organizers may use anonymized quotes from your essay answers in sponsor materials and on the Outreachy website.
+We will not associate your personally identifible information with your essay answers.
+We will remove any personally identifying information from the essay answers.
 </p>
 <p>Step {{ wizard.steps.step1 }} of {{ wizard.steps.count }}</p>
 <hr>
