Create new applicant help contact form and contract redirection page.

--- a/contacts/templates/contact_form/contact_applicant_help.html
+++ b/contacts/templates/contact_form/contact_applicant_help.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
 {% block title %}
-Contact Outreachy organizers
+Get Help
 {% endblock %}
 
 {% block content %}
 
-<p>Please contact Outreachy organizers for questions relating to sponsorship, community participation, or mentoring with Outreachy.</p>
+<p>Outreachy volunteers are open to questions, no matter how big or small! We welcome potential Outreachy applicants to contact us through this form with their questions.</p>
 
 {% include "home/snippet/privacy_policy.html" %}
 
