Update navigation menu to point to new contacts page

--- a/outreachyhome/templates/base.html
+++ b/outreachyhome/templates/base.html
@@ -210,7 +210,7 @@
 						About Us
 					</a>
 					<div class="dropdown-menu" aria-labelledby="navbarAboutUs">
-						<a class="dropdown-item" href="/contact/">Contact Us</a>
+						<a class="dropdown-item" href="/contact/contact-us/">Contact Us</a>
 						<a class="dropdown-item" href="/promote/">Promote Outreachy</a>
 						<a class="dropdown-item" href="/blog/">Blog</a>
 					</div>
