Update contact links for all django-owned pages

--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -19,7 +19,7 @@ Call for Outreachy community coordinators and mentors
 	to receive a notification for next round.</p>
 {% endif %}
 
-<p>If you have any questions about Outreachy, you can <a href="/contact/">contact Outreachy organizers or the mentors mailing list</a>.
+<p>If you have any questions about Outreachy, you can <a href="{% url 'contact-us' %}">contact Outreachy organizers or the mentors mailing list</a>.
 
 <h2>Terms used</h2>
 {% include "home/snippet/foss-terms.html" %}
