--- a/home/templates/home/eligibility.html
+++ b/home/templates/home/eligibility.html
@@ -57,7 +57,7 @@
 	If you're unsure if you meet the above eligibility rules,
 	it's better to fill out the initial application.
 	Once you've submitted your initial application, if you have any questions,
-	<a href="/contact/">you can contact the Outreachy organizers.</a></p>
+	<a href="{% url 'contact-us' %}">you can contact the Outreachy applicant helpers.</a></p>
 
 	<p class="card-text"><a href="{% url 'eligibility' %}" class="btn btn-success">Start Your Initial Application</a></p>
 {% else %}
