--- a/home/templates/home/eligibility_wizard_essay_questions.html
+++ b/home/templates/home/eligibility_wizard_essay_questions.html
@@ -14,7 +14,7 @@ Outreachy's goal is to support people from groups who are under-represented in t
 The following essay questions help us determine if your application is aligned with our program goal.
 </p>
 <p>
-The answer to this question will only be seen by the <a href="/contact/">Outreachy organizers</a>.
+The answer to this question will only be seen by the <a href="{% url 'contact-us' %}">Outreachy organizers</a>.
 It will not be shared with mentors, coordinators, or other applicants.
 Please note that Outreachy organizers may use anonymized quotes from your essay answers in sponsor materials and on the Outreachy website.
 We will not associate your personally identifible information with your essay answers.
