--- a/home/templates/home/eligibility_wizard_foss_experience.html
+++ b/home/templates/home/eligibility_wizard_foss_experience.html
@@ -15,7 +15,7 @@ Outreachy asks the following questions to see if we are meeting our goal
 of promoting free software to people from groups under-represented in the technology industry.
 </p>
 <p>
-The answer to these questions will only be seen by the <a href="/contact/">Outreachy organizers</a>.
+The answer to these questions will only be seen by the <a href="{% url 'contact-us' %}">Outreachy organizers</a>.
 It will not be shared with mentors, coordinators, or other applicants.
 Please be completely honest in your answers.
 </p>
