--- a/home/templates/home/eligibility_wizard_gender.html
+++ b/home/templates/home/eligibility_wizard_gender.html
@@ -7,7 +7,7 @@ Outreachy Initial Application
 {% block content %}
 <h1>Outreachy Initial Application</h1>
 <p>
-The answer to these questions will only be seen by the <a href="/contact/">Outreachy organizers</a>.
+The answer to these questions will only be seen by the <a href="{% url 'contact-us' %}">Outreachy organizers</a>.
 It will not be shared with mentors, coordinators, or other applicants.
 </p>
 
