--- a/home/templates/home/eligibility_wizard_us_demographics.html
+++ b/home/templates/home/eligibility_wizard_us_demographics.html
@@ -13,7 +13,7 @@ Outreachy Initial Application
 The following question applies to U.S. citizens and permanent residents.
 </p>
 <p>
-The answer to this question will only be seen by the <a href="/contact/">Outreachy organizers</a>.
+The answer to this question will only be seen by the <a href="{% url 'contact-us' %}">Outreachy organizers</a>.
 It will not be shared with mentors, coordinators, or other applicants.
 </p>
 <p>Step {{ wizard.steps.step1 }} of {{ wizard.steps.count }}</p>
