--- a/home/templates/home/blog/round-statistics.html
+++ b/home/templates/home/blog/round-statistics.html
@@ -45,7 +45,7 @@ Statistics for Outreachy {{ current_round.internstarts|date:"F Y" }} to {{ curre
 		<li>For contributors who live in the United States, or are United States residents or nationals, {{ demographics_stats.2|floatformat:"0"|intcomma }}% are Black/African American, Hispanic/Latin@, Native American/American Indian, Alaska Native, Native Hawaiian, or Pacific Islander. {{ demographics_stats.1|floatformat:"0"|intcomma }}% are white.</li>
 	</ul>
 	<h2>How can you help?</h2>
-	<p>Outreachy currently has {{ funding_stats.2 }} applicants, but only enough funding to accept {{ funding_stats.3 }} interns. Can your company sponsor one intern at $6,500? Please <a href="/contact/">contact us today</a>!</p>
+	<p>Outreachy currently has {{ funding_stats.2 }} applicants, but only enough funding to accept {{ funding_stats.3 }} interns. Can your company sponsor one intern at $6,500? Please <a href="/contact/contact-us/">contact us today</a>!</p>
 	{% endwith %}
 
 {% endif %}
