--- a/home/templates/home/eligibility_wizard_promotional.html
+++ b/home/templates/home/eligibility_wizard_promotional.html
@@ -11,7 +11,7 @@ Outreachy Initial Application
 
 <p>
 We'd like to know how you found us!
-The answer to the following question will only be seen by the <a href="/contact/">Outreachy organizers</a>.
+The answer to the following question will only be seen by the <a href="{% url 'contact-us' %}">Outreachy organizers</a>.
 It will not be shared with mentors, coordinators, or other applicants.
 </p>
 <p>Step {{ wizard.steps.step1 }} of {{ wizard.steps.count }}</p>
