Update photos and bios for Karen and Tony

--- a/contacts/templates/contact_form/contact.html
+++ b/contacts/templates/contact_form/contact.html
@@ -39,7 +39,7 @@ Contact Outreachy
 		</div>
 		<div class="col-sm">
 			<img src="{% static 'organizers/tony.jpg' %}" class="img-thumbnail float-top mr-3" alt="Photo of Sage" height="200" width="200">
-			<p>Tony Sebro is General Council for the Wikimedia Foundation. Tony uses he/him pronouns.</p>
+			<p>Tony Sebro is Deputy General Council for the Wikimedia Foundation. Tony uses he/him pronouns.</p>
 		</div>
 	</div>
 	<div class="row">
