Add CC BY-SA photo attribution

--- a/contacts/templates/contact_form/contact.html
+++ b/contacts/templates/contact_form/contact.html
@@ -38,8 +38,8 @@ Contact Outreachy
 			<p>Sage Sharp is a diversity and inclusion consultant, and founder of Otter Tech. Sage uses they/them pronouns.</p>
 		</div>
 		<div class="col-sm">
-			<img src="{% static 'organizers/tony.jpg' %}" class="img-thumbnail float-top mr-3" alt="Photo of Sage" height="200" width="200">
-			<p>Tony Sebro is Deputy General Council for the Wikimedia Foundation. Tony uses he/him pronouns.</p>
+			<img src="{% static 'organizers/tony.jpg' %}" class="img-thumbnail float-top mr-3" alt="Photo of Tony is CC BY-SA 4.0 by Myleen Hollero - Myleen Hollero Photography" height="200" width="200">
+			<p>Tony Sebro is Deputy General Council for the Wikimedia Foundation. Tony uses he/him pronouns.</p><i>Photo of Tony is CC BY-SA 4.0 by Myleen Hollero - Myleen Hollero Photography.</i></p>
 		</div>
 	</div>
 	<div class="row">
