Update community CFP to talk about Outreachy's program goals

--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -7,7 +7,7 @@ Call for Outreachy community coordinators and mentors
 
 <a href="{% url 'community-cfp' %}">Timeline, FAQ, & Participating Communities</a>
 <h1>Call for Outreachy Community Participation</h1>
-<p>Twice a year, Free and Open Source Software (FOSS) communities work with Outreachy organizers to offer internships to <a href="/apply/eligibility/">people from groups underrepresented in tech.</a> Interns work remotely with mentors from Free and Open Source Software (FOSS) communities on projects ranging from programming, user experience, documentation, illustration and graphical design, to data science.
+<p>Twice a year, Free and Open Source Software (FOSS) communities work with Outreachy organizers to offer remote internships. Outreachy's goal is to support <a href="/apply/eligibility/">people from groups underrepresented in the technology industry.</a> Interns work remotely with mentors from Free and Open Source Software (FOSS) communities on projects ranging from programming, user experience, documentation, illustration and graphical design, to data science.
 
 <p>Outreachy interns come from a wide range of backgrounds. Outreachy is open to applicants from underrepresented groups over 18 who fit our <a href="/apply/eligibility/">intern eligibility rules</a>. Interns could be university students, code school graduates, people switching careers, or people coming back to tech after starting a family or other long absence. Most Outreachy interns already have some exposure to using FOSS and technical knowledge, but many of them have not contributed to FOSS communities before. During our six-week application period, potential interns make contributions to the participating FOSS communities, which allows mentors to accurately evaluate their skills.</p>
 
