Eligibility check -> initial application

--- a/home/templates/home/internrelationship_form.html
+++ b/home/templates/home/internrelationship_form.html
@@ -18,7 +18,7 @@ Sign Outreachy Intern Agreement
 			{{ field.errors }}
 			{% if 'Legal' in field.label_tag %}
 				<h2>Intern Agreement</h2>
-				<p>By providing your full legal name below, you are agreeing that the information you provided on your eligibility check and application is accurate. If any of the information needs to be updated, please do not sign this agreement and instead contact the Outreachy organizers to correct the information.</p>
+				<p>By providing your full legal name below, you are agreeing that the information you provided on your initial and final application is accurate. If any of the information needs to be updated, please do not sign this agreement and instead contact the Outreachy organizers to correct the information.</p>
 				<div class="card mb-3">
 					<div class="card-body">
 						{{ intern_agreement_html|safe }}
