--- a/home/templates/home/project_applicants.html
+++ b/home/templates/home/project_applicants.html
@@ -13,7 +13,7 @@ Review Project Applicants
 
 <h2>Applicant Eligibility</h2>
 <p>
-All applicants who are listed on this page have completed an eligibility check, and meet Outreachy's demographics requirements and time requirements eligibility rules. In some cases, their time commitments may be borderline (e.g. just above the number of consecutive days free from full-time commitments). Please review the time commitments section carefully.
+The Outreachy organizers have reviewed and approved the initial applications of all applicants on this page. In some cases, their time commitments may be borderline (e.g. just above the number of consecutive days free from full-time commitments). Please review the time commitments section carefully.
 </p>
 
 <p>
