Wire up views for initial application approval or rejection

--- a/home/templates/home/snippet/applicant_review_actions.html
+++ b/home/templates/home/snippet/applicant_review_actions.html
@@ -5,21 +5,16 @@
 		<thread class="thread-dark">
 		<tr>
 			<th scope="col">Approve applicant?</th>
-			<th scope="col">Pend application?</th>
 			<th scope="col">Reject applicant?</th>
 			<th scope="col">Delete application?</th>
 		</tr>
 		</thread>
 		<td>{% if application.approval_status != application.APPROVED %}
-				<a class='btn btn-success' href="{% url 'applicant-review-detail' applicant_username=application.applicant.account.username %}">Approve Application</a>
-			{% endif %}
-		</td>
-		<td>{% if application.approval_status != application.PENDING %}
-				<a class='btn btn-secondary' href="{% url 'applicant-review-detail' applicant_username=application.applicant.account.username %}">Put in Pending</a>
+				<a class='btn btn-success' href="{% url 'application-action' action='approve' applicant_username=application.applicant.account.username %}">Approve Application</a>
 			{% endif %}
 		</td>
 		<td>{% if application.approval_status != application.REJECTED %}
-				<a class='btn btn-warning' href="{% url 'applicant-review-detail' applicant_username=application.applicant.account.username %}">Reject Application</a>
+				<a class='btn btn-warning' href="{% url 'application-action' action='reject' applicant_username=application.applicant.account.username %}">Reject Application</a>
 			{% endif %}
 		</td>
 		<td>
