Add views and templates to display and change initial application essay ratings.
Allow people who are marked as reviewers for the current round to add
essay ratings. The ratings are from +3 to -3. The essay rating summary
is displayed on the application summary and application details page.

--- a/home/templates/home/applicant_review_detail.html
+++ b/home/templates/home/applicant_review_detail.html
@@ -152,6 +152,7 @@
 			<p>Help text: Please provide specific examples. Outreachy organizers strongly encourage you to write your personal stories. We want you to know that we won't judge your writing style, grammar or spelling.</p>
 		</div>
 	</div>
+	{% include 'home/snippet/applicant_review_essay_rating.html' %}
 
 	<h2>Time Commitment Details</h2>
 	{% with tcs=application.get_time_commitments applicant=application.applicant final_application=applicant_contributions.0.get_application %}
