Update unclear rating formatting

--- a/home/templates/home/snippet/essay_rating.html
+++ b/home/templates/home/snippet/essay_rating.html
@@ -2,7 +2,7 @@
 	<button type="button" class="btn btn-success">
 	{{ essay_rating.0 }}
 	</button>
-{% elif essay_rating.0 == '0' %}
+{% elif essay_rating.0 == '??' %}
 	<button type="button" class="btn btn-secondary">
 	{{ essay_rating.0 }}
 	</button>
