--- a/home/templates/home/snippet/applicant_review_essay_rating.html
+++ b/home/templates/home/snippet/applicant_review_essay_rating.html
@@ -27,7 +27,7 @@
 										<button class="dropdown-item" formaction="{% url 'essay-rating' applicant_username=application.applicant.account.username rating='STRONG' %}">+3</button>
 										<button class="dropdown-item" formaction="{% url 'essay-rating' applicant_username=application.applicant.account.username rating='GOOD' %}">+2</button>
 										<button class="dropdown-item" formaction="{% url 'essay-rating' applicant_username=application.applicant.account.username rating='MAYBE' %}">+1</button>
-										<button class="dropdown-item" formaction="{% url 'essay-rating' applicant_username=application.applicant.account.username rating='UNCLEAR' %}">Unclear</button>
+										<button class="dropdown-item" formaction="{% url 'essay-rating' applicant_username=application.applicant.account.username rating='UNCLEAR' %}">??</button>
 										<button class="dropdown-item" formaction="{% url 'essay-rating' applicant_username=application.applicant.account.username rating='NOBIAS' %}">-1</button>
 										<button class="dropdown-item" formaction="{% url 'essay-rating' applicant_username=application.applicant.account.username rating='NOTUNDERSTOOD' %}">-2</button>
 										<button class="dropdown-item" formaction="{% url 'essay-rating' applicant_username=application.applicant.account.username rating='SPAM' %}">-3</button>
@@ -41,7 +41,7 @@
 									<li><button type="button" class="btn btn-success">+3</button> means the person provided answers that are a <b>strongly</b> compelling case for <b>both</b> conditions.</li><br>
 									<li><button type="button" class="btn btn-success">+2</button> means the person provided answers that are a <b>strongly</b> compelling case for <b>one</b> of the conditions.</li><br>
 									<li><button type="button" class="btn btn-success">+1</button> means the person provided answers that are a <b>weakly</b> compelling case for <b>one</b> of the conditions, but neither of the answers are strongly compelling.</li><br>
-									<li><button type="button" class="btn btn-secondary"> 0</button> means the essay answers were to short or unclear to make a decision. We may need to follow up with the applicant and ask them to update their essay questions.</li><br>
+									<li><button type="button" class="btn btn-secondary">??</button> means the essay answers were to short or unclear to make a decision. We may need to follow up with the applicant and ask them to update their essay questions.</li><br>
 									<li><button type="button" class="btn btn-warning">-1</button> means the essay answers show that the applicant understands they do not face either condition.</li><br>
 									<li><button type="button" class="btn btn-warning">-2</button> means the applicant did not understand the instructions in the essay question and gave an answer unrelated to discrimination/bias and underrepresentation of a group based on identity or background.</li><br>
 									<li><button type="button" class="btn btn-warning">-3</button> means the essay answers contained spam or trolling.</li><br>
