Refactor initial-application preview to share code.

--- a/home/templates/home/snippet/initial_application.html
+++ b/home/templates/home/snippet/initial_application.html
@@ -26,9 +26,7 @@
 			{% endif %}
 			{% if application.applicantgenderidentity %}
 				<h4>Gender Identity</h4>
-				<hr>
-				<p>Q1. What is your gender identity?</p>
-				<p>A1. {{ application.applicantgenderidentity }}</p>
+				{{ application.applicantgenderidentity.get_html|safe }}
 				<hr>
 			{% endif %}
 			{% if application.barrierstoparticipation %}
