--- a/home/templates/home/snippet/initial_application.html
+++ b/home/templates/home/snippet/initial_application.html
@@ -4,36 +4,15 @@
 	</div>
 	<div class="card-body">
 		<div class="card-text">
-			{% if application.workeligibility %}
-				<h4>Work Eligibility</h4>
-				{{ application.workeligibility.get_html|safe }}
+			{% for label, obj in application.get_question_models %}
+				<h4>{{ label }}</h4>
+				{% for question, answer in obj.get_answers %}
+					<hr>
+					<p>Q{{ forloop.counter }}. {{ question }}</p>
+					<p>A{{ forloop.counter }}. {{ answer }}</p>
+				{% endfor %}
 				<hr>
-			{% endif %}
-			{% if application.paymenteligibility %}
-				<h4>Tax Form information</h4>
-				{{ application.paymenteligibility.get_html|safe }}
-				<hr>
-			{% endif %}
-			{% if application.priorfossexperience %}
-				<h4>Prior Experience with Free and Open Source Software</h4>
-				{{ application.priorfossexperience.get_html|safe }}
-				<hr>
-			{% endif %}
-			{% if application.applicantraceethnicityinformation %}
-				<h4>Race and Ethnicity</h4>
-				{{ application.applicantraceethnicityinformation.get_html|safe }}
-				<hr>
-			{% endif %}
-			{% if application.applicantgenderidentity %}
-				<h4>Gender Identity</h4>
-				{{ application.applicantgenderidentity.get_html|safe }}
-				<hr>
-			{% endif %}
-			{% if application.barrierstoparticipation %}
-				<h4>Essay Questions</h4>
-				{{ application.barrierstoparticipation.get_html|safe }}
-				<hr>
-			{% endif %}
+			{% endfor %}
 			<h4>Time Commitments</h4>
 			{% include 'home/snippet/time_commitment_overview.html' %}
 		</div>
